# capjs-server

./: .coverage  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-03-replay-protection-design.md  2026-03-03-replay-protection.md
src/capjs_server/: __init__.py  nonce_store.py  prng.py  testing.py  tokens.py
src/capjs_server/django/: __init__.py  views.py
tests/: conftest.py  django_settings.py  django_urls.py  test_django.py  test_nonce_store.py  test_prng.py  test_server.py  test_testing.py  test_tokens.py
